[package]
name = "crock"
version = "0.1.0"
description = "An example generated using the hello-world template"
authors = ["Charon Ryui <Charon_Ryui@outlook.com>"]
license = "MIT"
edition = "2024"

[dependencies]
color-eyre = "0.6.3"
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.32"
notify-rust = { version = "4.12.0", features = ["image"] }
ratatui = "0.30.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["macros", "rt", "sync", "time"] }
toml = "1.0.3"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
tui-big-text = "0.8.2"
tui-input = "0.15.0"

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
